Fixed text for better readability

--- a/frontend/src/css/GettingStarted.css
+++ b/frontend/src/css/GettingStarted.css
@@ -16,10 +16,6 @@
   text-align: center;
 }
 
-.logo {
-  max-width: 200px; 
-  max-height: 200px; 
-}
 
 .banner{
   width: 100%;
@@ -62,10 +58,12 @@
 
 }
 
+/*For about section*/
 img{
   width: 100%;
   height: 100%;
   object-fit: cover;
+  filter: blur(1.8px);
 }
 
 
@@ -76,10 +74,12 @@ img{
   transform: translate(-50%, -50%);
   width: 100%;
   color:#fff;
+  justify-content: relative;
+  line-height: 2;
 }
 
 .about-text-section h1{
-  padding: 3rem;
+  padding: 4rem;
   font-size: 3rem;
   font-weight: 800;
   background: #fff;
@@ -89,8 +89,9 @@ img{
 
 .about-text-section p{
   font-size: 1.5rem; 
+  font-family: monospace;
   color: #fff;
-  padding: 1rem 0 2rem 0;
+  padding: 1rem 2rem 2rem 1rem;
   position: relative;
   top: 55%;
   left: 50%;
@@ -98,6 +99,6 @@ img{
   max-width: 60%; 
   text-align: center; 
   padding: 0.5rem;
-  line-height: 1.2;
-  font-weight: 550;
+  line-height: 1.5;  
+  font-weight: 700;
 }
